--- a/resources/Docker/Dockerfile
+++ b/resources/Docker/Dockerfile
@@ -4,6 +4,10 @@ FROM ubuntu:22.04
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=UTC
 
+# Environment variables for S3 configuration
+ENV CONFIG_BUCKET=""
+ENV CONFIG_KEY=""
+
 RUN apt-get update && \
     apt-get install -y --no-install-recommends nginx awscli jq curl tzdata && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
